// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Turnstile snapshot > renders its container 1`] = `
<div>
  <div />
</div>
`;

exports[`Turnstile snapshot > renders the failure message when the script cannot load 1`] = `
<div>
  <div />
  <p
    class="text-xs text-app-error"
    role="alert"
  >
    The verification widget could not load. Check your connection and reload the page.
  </p>
</div>
`;
